Fix sidebar items cropped due to insufficient width

--- a/src/gams_bootstrap.scss
+++ b/src/gams_bootstrap.scss
@@ -153,7 +153,7 @@ body {
 
 @media only screen and (min-width: 768px) {
   .sidebar-container {
-    width: 155px;
+    width: 160px;
   }
 
   .sidebar {
